// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditListingLayout component matches snapshot 1`] = `
<div
  className="main-layout"
>
  <DashboardHeader
    selectedKey="LISTINGS"
  />
  <div
    className="main-layout__content main-layout__content--full-width"
  >
    <div
      className="listing-panel"
    >
      <div
        className="listing-panel__container"
      >
        <Dropdown
          mouseEnterDelay={0.15}
          mouseLeaveDelay={0.1}
          overlay={
            <ul
              className="listing-panel__list"
              id="scrollable-target"
            >
              <InfiniteScroll
                dataLength={1}
                endMessage={
                  <p
                    className="text-align-center mt-8"
                  >
                    <b>
                      <Memo(FormattedMessage)
                        id="shared.youHaveSeenItAll"
                      />
                    </b>
                  </p>
                }
                hasMore={false}
                loader={
                  <p
                    className="text-align-center mt-8"
                  >
                    <b>
                      <Memo(FormattedMessage)
                        id="shared.loadingDots"
                      />
                    </b>
                  </p>
                }
                next={[MockFunction]}
                scrollableTarget="scrollable-target"
              >
                <li
                  className="listing-panel__item cursor-pointer"
                  onClick={[MockFunction]}
                  role="presentation"
                >
                  <div
                    className="listing-panel__image"
                  >
                    <Image
                      alt=""
                      height="48"
                      src="memory://listingphoto/5c51fcbe-6303-4c5d-af99-e983138d42ae/photo/medium-0478517e0a2ba650ae0554fe128f57d4.jpg"
                      width="68"
                    />
                  </div>
                  <p
                    className="listing-panel__name mb-0"
                  >
                    <FormattedOrRawMessage
                      message="Lenora Spinka"
                    />
                  </p>
                </li>
              </InfiniteScroll>
            </ul>
          }
          placement="bottomLeft"
        >
          <div
            className="listing-panel__column"
          >
            <div
              className="listing-panel__column"
            >
              <div
                className="listing-panel__image"
              >
                <Image
                  alt=""
                  height="48"
                  src="/images/housing-preview-01.png"
                  width="68"
                />
              </div>
              <div
                className="listing-panel__content"
              >
                <h2
                  className="listing-panel__title mb-0"
                >
                  <FormattedOrRawMessage
                    message="selectedListingTitle"
                  />
                </h2>
                <p
                  className="listing-panel__text mb-0"
                >
                  selectedListingDescription
                </p>
              </div>
              <GradientButton
                addonAfter={null}
                addonBefore={
                  <SvgIcon
                    className="icon-right"
                    icon="arrow-down"
                  />
                }
                className="listing-panel__btn main-btn--icon"
                variant="tertiary"
              />
            </div>
          </div>
        </Dropdown>
        <Link
          href="/listing/listingId"
        >
          <a
            target="_blank"
          >
            <GradientButton
              addonAfter={null}
              addonBefore={null}
              className="main-btn--medium"
              text={
                Object {
                  "id": "shared.listingPreview",
                }
              }
              variant="primary"
            />
          </a>
        </Link>
      </div>
    </div>
    <Tabs
      activeKey="activeKey"
      className="w-100 max-width-1440 mr-auto ml-auto"
      onTabClick={[MockFunction]}
      tabPosition="left"
    >
      <TabPane
        key="PROPERTY_TYPE"
        tab={
          <Memo(FormattedMessage)
            id="shared.propertyType"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="ACCOMMODATION"
        tab={
          <Memo(FormattedMessage)
            id="shared.accommodation"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="LOCATION"
        tab={
          <Memo(FormattedMessage)
            id="shared.location"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="LOCATION_MAP"
        tab={
          <Memo(FormattedMessage)
            id="shared.locationMap"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="AMENITIES"
        tab={
          <Memo(FormattedMessage)
            id="shared.amenities"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="CAPABILITIES"
        tab={
          <Memo(FormattedMessage)
            id="shared.capabilities"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="SERVICES"
        tab={
          <Memo(FormattedMessage)
            id="shared.services"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="PHOTOS"
        tab={
          <Memo(FormattedMessage)
            id="shared.photos"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="DESCRIPTION"
        tab={
          <Memo(FormattedMessage)
            id="shared.description"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="HOUSE_RULES"
        tab={
          <Memo(FormattedMessage)
            id="shared.houseRules"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="RESERVATION_PREFERENCES"
        tab={
          <Memo(FormattedMessage)
            id="shared.reservationPreferences"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="AVAILABILITY"
        tab={
          <Memo(FormattedMessage)
            id="shared.availabilityAndPricing"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="PRICING_AND_DISCOUNTS"
        tab={
          <Memo(FormattedMessage)
            id="shared.pricingAndDiscounts"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
    </Tabs>
  </div>
</div>
`;

exports[`EditListingLayout component matches snapshot when isListingPresent equals false 1`] = `
<div
  className="main-layout"
>
  <DashboardHeader
    selectedKey="LISTINGS"
  />
  <div
    className="main-layout__content main-layout__content--full-width"
  >
    <div
      className="listing-panel"
    >
      <div
        className="listing-panel__container"
      >
        <Dropdown
          mouseEnterDelay={0.15}
          mouseLeaveDelay={0.1}
          overlay={
            <ul
              className="listing-panel__list"
              id="scrollable-target"
            >
              <InfiniteScroll
                dataLength={1}
                endMessage={
                  <p
                    className="text-align-center mt-8"
                  >
                    <b>
                      <Memo(FormattedMessage)
                        id="shared.youHaveSeenItAll"
                      />
                    </b>
                  </p>
                }
                hasMore={false}
                loader={
                  <p
                    className="text-align-center mt-8"
                  >
                    <b>
                      <Memo(FormattedMessage)
                        id="shared.loadingDots"
                      />
                    </b>
                  </p>
                }
                next={[MockFunction]}
                scrollableTarget="scrollable-target"
              >
                <li
                  className="listing-panel__item cursor-pointer"
                  onClick={[MockFunction]}
                  role="presentation"
                >
                  <div
                    className="listing-panel__image"
                  >
                    <Image
                      alt=""
                      height="48"
                      src="memory://listingphoto/5c51fcbe-6303-4c5d-af99-e983138d42ae/photo/medium-0478517e0a2ba650ae0554fe128f57d4.jpg"
                      width="68"
                    />
                  </div>
                  <p
                    className="listing-panel__name mb-0"
                  >
                    <FormattedOrRawMessage
                      message="Lenora Spinka"
                    />
                  </p>
                </li>
              </InfiniteScroll>
            </ul>
          }
          placement="bottomLeft"
        >
          <div
            className="listing-panel__column"
          >
            <Skeleton
              active={true}
              avatar={true}
              paragraph={
                Object {
                  "rows": 1,
                }
              }
              round={true}
              title={true}
            />
          </div>
        </Dropdown>
        <Link
          href="/listing/listingId"
        >
          <a
            target="_blank"
          >
            <GradientButton
              addonAfter={null}
              addonBefore={null}
              className="main-btn--medium"
              text={
                Object {
                  "id": "shared.listingPreview",
                }
              }
              variant="primary"
            />
          </a>
        </Link>
      </div>
    </div>
    <Tabs
      activeKey="activeKey"
      className="w-100 max-width-1440 mr-auto ml-auto"
      onTabClick={[MockFunction]}
      tabPosition="left"
    >
      <TabPane
        key="PROPERTY_TYPE"
        tab={
          <Memo(FormattedMessage)
            id="shared.propertyType"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="ACCOMMODATION"
        tab={
          <Memo(FormattedMessage)
            id="shared.accommodation"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="LOCATION"
        tab={
          <Memo(FormattedMessage)
            id="shared.location"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="LOCATION_MAP"
        tab={
          <Memo(FormattedMessage)
            id="shared.locationMap"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="AMENITIES"
        tab={
          <Memo(FormattedMessage)
            id="shared.amenities"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="CAPABILITIES"
        tab={
          <Memo(FormattedMessage)
            id="shared.capabilities"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="SERVICES"
        tab={
          <Memo(FormattedMessage)
            id="shared.services"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="PHOTOS"
        tab={
          <Memo(FormattedMessage)
            id="shared.photos"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="DESCRIPTION"
        tab={
          <Memo(FormattedMessage)
            id="shared.description"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="HOUSE_RULES"
        tab={
          <Memo(FormattedMessage)
            id="shared.houseRules"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="RESERVATION_PREFERENCES"
        tab={
          <Memo(FormattedMessage)
            id="shared.reservationPreferences"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="AVAILABILITY"
        tab={
          <Memo(FormattedMessage)
            id="shared.availabilityAndPricing"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
      <TabPane
        key="PRICING_AND_DISCOUNTS"
        tab={
          <Memo(FormattedMessage)
            id="shared.pricingAndDiscounts"
          />
        }
      >
        <section
          className="new-listing pt-32"
        >
          Foo
        </section>
      </TabPane>
    </Tabs>
  </div>
</div>
`;
